New tmux config

--- a/install/.tmux.conf
+++ b/install/.tmux.conf
@@ -1,17 +1,33 @@
+# Active mouse click
 set -g mouse on
+
+# Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Color swag
 set -g status-bg default
 set -g status-fg white
+
+# Set bar to the top for swag
 set-option -g status-position top
 
+# Shorcut
 bind -n F1 resize-pane -Z
+bind -n F2 select-window -l
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Keep current path when creating a new windows :
 bind c new-window      -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Setting for tmux-battery
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+run '~/.tmux/plugins/tpm/tpm'
